# obsidian_graph

./: 404.html  index.html  main.py  mkdocs.yml  pyproject.toml
docs/: LLD.md  PRD.md  usage.md
src/obsidian_graph/: graph_builder.py  obsidian_parser.py  sdk_interface.py
src/obsidian_graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_sdk.py
